--- a/bio.html
+++ b/bio.html
@@ -26,7 +26,7 @@
                     <li class="active"><a href="index.html">HOME</a></li>
                     <li><a href="bio.html">BIO</a></li>
                     <li><a href="albums.html">ALBUMS</a></li>
-                    <li><a href="upcomingshows.html">UPCOMING CONCERTS</a></li>
+                    <li><a href="upcomingconcerts.html">UPCOMING CONCERTS</a></li>
                      <h5 class="genres"><i>Genres: Avant-garde, alternative-rock</i></h5>
                 </ul>
            </div>
@@ -51,12 +51,12 @@ In 2008 he released two albums, Essentials / Seçkiler and Emir, and produced th
             <div class="container-fluid">
                <div class="navbar-header navbar-right hidden-xs">
                     <ul class="list-inline social-links">
-                           <li><a target-"_blank" href="#"><i class="fa fa-2x fa-youtube-square"></i></a></li>
-                           <li><a target-"_blank" href="#"><i class="fa fa-2x fa-spotify"></i></a></li>
-                            <li><a target-"_blank" href="#"><i class="fa fa-2x fa-soundcloud"></i></a></li>
-                            <li><a target-"_blank" href="#"><i class="fa fa-2x fa-mixcloud"></i></a></li>
-                           <li><a target-"_blank" href="#"><i class="fa fa-2x fa-facebook"></i></a></li>
-                           <li><a target-"_blank" href="#"><i class="fa fa-2x fa-instagram"></i></a></li>
+                           <li><a target-"_blank" href="https://youtu.be/KBBr064nbnE"><i class="fa fa-2x fa-youtube-square"></i></a></li>
+                           <li><a target-"_blank" href="https://open.spotify.com/artist/2AWUCT9xtcvkjpFq1ZgpPj"><i class="fa fa-2x fa-spotify"></i></a></li>
+                            <li><a target-"_blank" href="https://soundcloud.com/cemadrianofficial"><i class="fa fa-2x fa-soundcloud"></i></a></li>
+                            
+                           <li><a target-"_blank" href="https://www.facebook.com/cemadrian/"><i class="fa fa-2x fa-facebook"></i></a></li>
+                           <li><a target-"_blank" href="https://www.instagram.com/cemadrian/?hl=en"><i class="fa fa-2x fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
